# omp-ipc

./: .gitmodules  CMakeLists.txt  README.md  generate-docs.js
apidocs/: Actors.json  Checkpoints.json  Class.json  Core.json  CustomModels.json  Dialog.json  Menu.json  Players.json  Recording.json  TextDraw.json  TextLabel.json  Variable.json  actors.json
src/: CMakeLists.txt  main.cpp
src/api/: Actor.cpp  IPCCore.cpp  Player.cpp
src/api/scripting/: Actor.cpp  Manager.cpp  Manager.hpp  Player.cpp
src/api/scripting/Actors/: APIs.cpp  Events.hpp
src/api/scripting/Checkpoints/: APIs.cpp  Events.hpp
src/api/scripting/Class/: APIs.cpp
src/api/scripting/Classes/: APIs.cpp  Events.hpp
src/api/scripting/Core/: APIs.cpp
src/api/scripting/CustomModels/: APIs.cpp
src/api/scripting/Dialog/: APIs.cpp
src/api/scripting/Dialogs/: APIs.cpp  Events.hpp
src/api/scripting/Menu/: APIs.cpp
src/api/scripting/Menus/: APIs.cpp  Events.hpp
src/api/scripting/Object/: APIs.cpp
src/api/scripting/Objects/: APIs.cpp  Events.hpp
src/api/scripting/Pickups/: APIs.cpp  Events.hpp
src/api/scripting/Players/: APIs.cpp  Events.hpp
src/api/scripting/Recording/: APIs.cpp
src/api/scripting/TextDraw/: APIs.cpp
src/api/scripting/TextLabel/: APIs.cpp
src/api/scripting/Textlabels/: APIs.cpp
src/api/scripting/Variable/: APIs.cpp
src/api/scripting/Vehicle/: APIs.cpp
src/message/: Handler.cpp  Handler.hpp  Socket.cpp  Socket.hpp
src/utils/: MagicMacro.hpp
